--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -42,6 +42,7 @@ module:
   imports:
     - path: github.com/HugoBlox/hugo-blox-builder/modules/blox-plugin-netlify
     - path: github.com/HugoBlox/hugo-blox-builder/modules/blox-tailwind
+    - path: github.com/LeisureZhao/wowchemy-shortcode-v1
 
 ############################
 ## ADVANCED
